--- a/detail1.html
+++ b/detail1.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="parent">
+        <div class="sale">
+            <p>Summer Sale For All Swim And Free Express Delivery - OFF 50%</p>
+            <a href="shop.html">Shop now</a>
+        </div>
+        <div class="menu">
+            <h2>E-commerce</h2>
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+            <a href="creataccount.html">Sign Up</a>
+            <a href="shop.html"> Shop</a>
+        <input type="text" placeholder="What you looking for?">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <p class="un">Username</p>
+        <a href="login.html" class="log">Log in</a>
+        </div>
+        <div class="img">
+            <img src="https://s3-alpha-sig.figma.com/img/dc40/ba89/7215f42e5883a64157f0aa3a4d1a866a?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ehBRHWQiMPeh1Qm5lowHf13haF5BlD-Fwp-saYPEIyuAFxaLsIS1qz2yqUklJrMQSQNM~6VmSywygicBsrB-E08Ybtmeztxwr6~D84pfv7mt26v09V2e6cGClzgC5uH8zyQyMnQofsErnmuqgxqxxdAdi9QHxxFFCjBOQwFWwQIg2ihuPJZqlLw~6rCLnBOsw7JBDr8w2r53wp3tyMP-UD~iaytnYZI5k-Yz6JQbcgNp-ad78-~BGuzyi6xfJYeT5ZjV~6zVq~rkd8YFcr~1mUPCabLTdni0VpZrWnCo0fI5t7C7s6co5uHQUwuGYPIHcgM91gyysE~AOAKKgOv8pw__" alt="">
+        </div>
     <div class="main">
         <img src="" alt="">
         <div class="details">
@@ -16,6 +36,7 @@
                 <p>Data: <span id="data"></span></p>
             </ul>
         </div>
+    </div>
     </div>
     <script src="detail1.js"></script>
 </body>
