--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
             <p class="password">Password</p>
             <input id="inp22" type="password">
             <h4>Don't have account ? <a href="creataccount.html">sign up</a></h4>
-            <button id="btn2" onclick="func20()">Log in</button>
+            <button id="btn2">Log in</button>
         </div>
     </div>
 </body>
