--- a/detail1.html
+++ b/detail1.html
@@ -28,12 +28,11 @@
             <img src="https://s3-alpha-sig.figma.com/img/dc40/ba89/7215f42e5883a64157f0aa3a4d1a866a?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ehBRHWQiMPeh1Qm5lowHf13haF5BlD-Fwp-saYPEIyuAFxaLsIS1qz2yqUklJrMQSQNM~6VmSywygicBsrB-E08Ybtmeztxwr6~D84pfv7mt26v09V2e6cGClzgC5uH8zyQyMnQofsErnmuqgxqxxdAdi9QHxxFFCjBOQwFWwQIg2ihuPJZqlLw~6rCLnBOsw7JBDr8w2r53wp3tyMP-UD~iaytnYZI5k-Yz6JQbcgNp-ad78-~BGuzyi6xfJYeT5ZjV~6zVq~rkd8YFcr~1mUPCabLTdni0VpZrWnCo0fI5t7C7s6co5uHQUwuGYPIHcgM91gyysE~AOAKKgOv8pw__" alt="">
         </div>
     <div class="main">
-        <img src="" alt="">
         <div class="details">
             <ul>
                 <li>Name: <span id="name"></span></li>
                 <li>Price: <span id="price"></span></li>
-                <p>Data: <span id="data"></span></p>
+                <a href="https://www.youtube.com/@Wylsacom/videos"> ОБЗОР НА ТОВАР</a>
             </ul>
         </div>
     </div>
