--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <a href="login.html" class="log">Log in</a>
     </div>
     <div class="img">
-        <img src="https://s3-alpha-sig.figma.com/img/dc40/ba89/7215f42e5883a64157f0aa3a4d1a866a?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ehBRHWQiMPeh1Qm5lowHf13haF5BlD-Fwp-saYPEIyuAFxaLsIS1qz2yqUklJrMQSQNM~6VmSywygicBsrB-E08Ybtmeztxwr6~D84pfv7mt26v09V2e6cGClzgC5uH8zyQyMnQofsErnmuqgxqxxdAdi9QHxxFFCjBOQwFWwQIg2ihuPJZqlLw~6rCLnBOsw7JBDr8w2r53wp3tyMP-UD~iaytnYZI5k-Yz6JQbcgNp-ad78-~BGuzyi6xfJYeT5ZjV~6zVq~rkd8YFcr~1mUPCabLTdni0VpZrWnCo0fI5t7C7s6co5uHQUwuGYPIHcgM91gyysE~AOAKKgOv8pw__" alt="">
+        <img src="https://th.bing.com/th/id/OIP.nChCJB-fuVcN_a6ufgwNKwHaFR?cb=iwc2&w=800&h=569&rs=1&pid=ImgDetMain" alt="">
     </div>
     <div class="shopcoll">
         <h1>Shop Collection</h1>
         <div class="img1">
-            <img src="https://s3-alpha-sig.figma.com/img/8d64/bd31/d2eda88ccb4cc71f499a5d94c2a5bd61?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ekJOG-71giKiggeiKWEvp1GVYPtO9RFJIVP72a1k7TcWpid-oCcOxILj8hO21mFt18LKEhYmZPv3uZWwvvN-g9ouzqNg16V4nouqfdOLSgaJajDRCdN646brSurKHE-W5Wu6y8zlhxlHNSq3Th7SM~QwOFFfmW2woG0OHOomiUQxLqFLJ8Vu0MeyCLfR0UmZJbInYeO4oMRj7xcbHjvPcWhl8uHv7WZ7FooNVVn4jPFE3lIrqGZ-hrD2vf0A45ADvNMPLPznu7r5tDKbbV3gvDp~azAGJY45J3u3mM91RR-nxAvOQSm05xmeCMUPha9-VZKjdjdIGl192ab5DEY9Ig__" alt="">
+            <img src="https://www.bing.com/images/blob?bcid=RGIdzcM0KHUIOC9Hc5gmYsYILlTKmYpjdLw" alt="">
             <h1>Headband</h1>
             <a href="">collection</a>
         </div>
             <div class="img2">
-                <img src="https://s3-alpha-sig.figma.com/img/637b/a5ec/bba8691512e22e4a663249a145b54afb?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=PH~xG94601VJ8AsKRdZViJjtk6gCOq5rcO01p~eTwTZ7cdsAzFPBUieCAYjx5H7FRa7q6L96Z-8jTG8d44JExkcs3Qt5SmxUkTUsHCqGMvPokGxI-UrIjHmJltt8Y~KtzFWFGv2Lzrkfq7pubiLYLvPbSN-v0wj~7O-t~YhuPNdnTS71rmLP2Ug4l-UwexpiUzx5ZpfRRIaoEZFSOnY6IovrLCeHypBHc7SYbgNXbh0npHqMqwl3GYja3aTozsW~6EUNvvIX2H11h-OQgmLKmiLrl6BVbh0zzBgLxdiudVsFBemSwQC1jTkp4DOFEsDiBwYFJBPYZFVEMLt5FGfIeg__" alt="">
+                <img src="" alt="">
                 <h1 class="p2">Earbuds</h1>
                 <a href="">collection</a>
             </div>
@@ -80,13 +80,13 @@
     <img src="https://s3-alpha-sig.figma.com/img/03f8/8b4c/be5df929ebde7688c573f3bf280a1c07?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=Wf-hse2R2vUGBSHfVYpez~5qCQQXuFbc-~Hy6jnrnp-nIMnekv9hO3ZOkIBDLvVUB9P9hCWjksXXntbjMK7DQdKDjsPZiBgCZ4sAS~hBsyDFGLyJA0Kx2SZ4vUyWaRQDwwrWmt8r1C9J1SKYub0ngbb24DR6kFCKi1R~~sjEti9cRABSfmJLOOdaU0bfda6QfE0j8q80H27Py33xwG5CfN2wQmMKZD4x2fuLFpmVDmSeryM9K4bejMCG0mqdWr6qJQLGb8JE6kU7yTu-F0jHJNaUpv2jRjVIw6R-uSF2h08rpFqGzQ4r8r8PijBzyOp5fYr1DRHZyrxkS0z~WEi0yw__" alt="" id="img3">
     <h2>Ipad Pro</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
-    <button href="shop.html">Shop Now</button>
+    <button ><a href="shop.html">Shop now</a></button>
 </div>
 <div class="product3">
     <img src="https://s3-alpha-sig.figma.com/img/42ed/e37f/5b7179151ff1aece13de5d13a9577763?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=uGuhB4iDoFcHu9X4UaatQ9xNvP2o6umav9nWDylyafjJNWtWIZdwC1FeKPIHXKvS2yuccgR5R-32LXZvx2OU0JIM~NE7va5VPUTdq-kvzij3JjizTrxR4hT-RiUrXLhsonl0CI3MKJKjNwjO4ADu09dNQgVJ45WQ-6DsPPWZiW-OwpAqzWepq~L-o5rAzXUwxzYL3hlR-BCsZhXqGYWYddeMhPukwdocUzuccCNbHzK6ygjFZKLQEeC1HNpXe5MZhiHymfeA8crMp8YK7qbS1ZSIT2pktkAgzDZuhOvOg7tm-sbpqjjtaLpXH3nJRaDZNJmTdJt2c11ZRLeVX5itYg__" alt="" id="img4">
     <h2>Samsa Galaxy</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
-    <button href="shop.html">Shop Now</button>
+    <button ><a href="shop.html">Shop now</a></button>
 </div>
 <div class="product4">
     <img src="https://s3-alpha-sig.figma.com/img/841a/2189/2886e7ecb5d47ea5c6ae4bebd8ac7b6a?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=a46L9XPeqG8gTWW86qCYRpsBGZi63YN1QsF~g7GTmT4lJIpjHuz7HXh2uhH-Qvgl82w6gPWZA2QwyQiA3QrV8z0WxTf6SidSjF0MxiVSkdc7KuFzT07OsIltp1MyrAlWm-046cyawpNabrE14sdcsYlNMzfRWc4OVTQhRVS3THsY2rsMd9lJ06Od6p0X-ZFmnj-WbHOV8Qs-apfBMdw5XZNpgLhq6~12oXbVs6oibwhhkBhqNn7~cKf5gesrzvGx~Zt5SjeKZ4YR8N0buxWj~dC2CQLVg7U~dGXivEieTwuoBMJXpdCwtTot5cyKYRkR~nDaJrhVFluBOOUNGWWEqw__" alt="" id="img5">
