--- a/shop.html
+++ b/shop.html
@@ -57,28 +57,28 @@
             </select>
         </div>
         <div class="goods">
-            <div class="good1 good">
+            <div class="good1 ">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjOg3t-Txbu3lEnOXVNMMM2bdcxuLTH_akhg&s" alt="">
                 <h3>Dell XPS 13</h3>
                 <p class="red"></p>
                 <p class="rate">★★★★☆</p>
                 <button class="add">add to cart</button>
             </div>
-            <div class="good2 good" >
+            <div class="good2 " >
                 <img src="https://media.very.co.uk/i/very/RKMLN_SQ1_0000000017_RED_SLf?$pdp_300x400_x2$&fmt=jpg" alt="">
                 <h3> XBOX Controller </h3>
                 <p class="red"></p>
                 <p class="rate">★★★★☆</p>
                 <button class="add">add to cart</button>
             </div>
-            <div class="good3 good">
-                <img src="https://irshad.az/cdn-cgi/image/width=540,height=550/storage/products/67960/sony-playstation-5-dualsense-white.jpg" alt="">
+            <div class="good3 ">
+                <img src="https://media.johnlewiscontent.com/i/JohnLewis/239052687alt1?$rsp-pdp-port-320$" alt="">
                 <h3> Sony PS5 controller </h3>
                 <p class="red"></p>
                 <p class="rate">★★★★☆</p>
                 <button class="add">add to cart</button>
             </div>
-            <div class="good4 good">
+            <div class="good4 ">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwf_GrKCWKyggyTTNUUTRKlZJ4P6TuztKNZ3qd3YgU5aTpbbEkClGg_sS0hN8BGiRVG04&usqp=CAU" alt="">
                 <h3> Samsung UHD </h3>
                 <p class="red"></p>
