--- a/login.html
+++ b/login.html
@@ -35,5 +35,6 @@
             <button id="btn2">Log in</button>
         </div>
     </div>
+    <script src="./login.js"></script>
 </body>
 </html>
