--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     <div class="shopcoll">
         <h1>Shop Collection</h1>
         <div class="img1">
-            <img src="https://www.bing.com/images/blob?bcid=RGIdzcM0KHUIOC9Hc5gmYsYILlTKmYpjdLw" alt="">
+            <img src="https://media.veli.store/media/product/Sony_WH-1000XM5_Wireless_Noise_Canceling_Stereo_Headset_white_1.png" alt="">
             <h1>Headband</h1>
-            <a href="">collection</a>
+            <a href="shop.html">collection</a>
         </div>
             <div class="img2">
-                <img src="" alt="">
+                <img src="https://www.beatsbydre.com/content/dam/beats/web/product/earbuds/beats-fit-pro/pdp/product-carousel/white/alt/white-01.jpg" alt="">
                 <h1 class="p2">Earbuds</h1>
                 <a href="">collection</a>
             </div>
             <div class="img3">
-                <img src="https://s3-alpha-sig.figma.com/img/aa22/058c/7c7ed32ee246b8fb8e8bfa7eff762cc4?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=bm5biR34Lttjfr7tJW8qmlfBOxIlX37WtWMXEW2CLzthfwVLy7A-z9cOuOZukOs25ppyQZ43DnsQ7g8jVcvH0a9741kA0c4o9CV6QxSIE4hzNSekUR1XgL3UWAF-sOzKnRYEEMN0hTIdie6DZu7mrYrTN26l-c7VGTg-vwOPjZvTiUX2FucSqDWRr7H6sY9CGQEhUWF~1ckpQ-qaW-ArBj0aWlo5SfOSHnQ3jqkhTU0RqcVkQr2PkNZeRitDLAi6IDZSLgsfUquuSprFJJGq0yGQAy~V1qTHd4qKC87-Q4XPVxGtFAYpEomq2cBbCJd7yQsTTfRWqHSVzRtEjv3-EQ__" alt="">
+                <img src="https://item-shopping.c.yimg.jp/i/n/stk-shop_77030663" alt="">
                 <h1 >Accessories</h1>
                 <a href="">collection</a>
             </div>
@@ -70,26 +70,26 @@
             <div class="ourproduct">
                 <h1>Explore Our Product</h1>
                 <div class="product1">
-    <img src="https://s3-alpha-sig.figma.com/img/28f6/89ad/f4fb9f1abffb61e573ab1e916484b396?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=kX5nF-Oe2BZTOP7ORojVdXreE~2ABzPapl61hLKfNY6y31KLlXAbkRC4zREKE-zr9tQURVcxxJrRhfh2MGWjSMFJ3bQKb2tA3mrc~ebrAI4XV5WyeFBEaYOdCWdAfMj8f7zVzjNH5hUbH9kfDQ8-onaU4jDOqJSdylRB3b7m8aac2MlVyBnfFXYpFS7iLcmh34XT-8LaonkPiVoUIeZSkru3LI19dk4xsXqS7QX6W8aOsoKkUILeDzOE1S3R0rzSThMksmZHx6s6eOCax7fzkcj2hpt7d0T5Qo6-WRsdRIKC6lZsYf9uv-JnfMGmVcch1orF4lUaoMnoPzXNoiTUzQ__" id="img2" alt="">
-    <img src="https://s3-alpha-sig.figma.com/img/20ee/b9db/dfc0147f5da888f4134b80f651192162?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=MLBaXxVMWompI5-TH0pLOHIOrpIInA6ZSAoBWB0RtBJnnnxhtn9gNsnvNBvrx5OQMSkJx8CE23~NnOgQwEhQNscJy4ALGjyc6FxSrhrDNc196mZpGTBahtMVxYyocO-vWwpND3Pt9~EUmYXR4XLG4ncMs1EuzD-~zn556ljI2eDZZNZ-JUZyO-0AsYVqMp0wYMkMuYOk4oQw1fnKxvR4h3019JMKDQo0kQg9jgVeAlPKgd1e-faW9gx75BggzH15Il5twgSKJMQyxRSBSYJBhFmMlnJG57mKhedwQ3APMeegrwP1P~pNiNdK55qTLxhDkSzcOs48K8i6F8vqQUuNMA__" id="img2" alt="">
+    <img src="https://cdn.shopify.com/s/files/1/0327/9585/2937/files/huawei-freebuds-6i-purple_80e06cb7-8f7a-4334-bbca-d4bd3d93f975.jpg?v=1742387725" id="img1" alt="">
+    <img src="https://store.storeimages.cdn-apple.com/1/as-images.apple.com/is/MYPD3ref_VW_34FR+watch-case-49-titanium-black-ultra2_VW_34FR+watch-face-49-ocean-ultra2_VW_34FR?wid=750&hei=712&trim=1%2C0&fmt=p-jpg&qlt=95&.v=VEREVGFsQzRDQXZXemdUckh4dmo3M2pDV2hhem5qNnpDenFtKzI1OXdzWjRaeVR4RW9XWXhWVHRHeXZEa3AwcGZsNDErT2hQbWVmS0VCWlVweVY1UHBiVmVXUVJPYnV1S0FZc3FMLzd3SDd1WDdBMEYxOHdORVUzNUYwZW1oWG1DNE9SNitRbkZucDJpVTQ1OXJpUjBiTEUzUW85Sno0bFVnTlk1MUgrdDg1TDRhMUZFNkNzVXdnTkZUdEl6aVpCOS9hNTBXSXZxREJuYlA3cktjelJXZw" id="img2" alt="">
     <h2>Popular Product</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
     <button href="shop.html">Shop Now</button>
 </div>
 <div class="product2">
-    <img src="https://s3-alpha-sig.figma.com/img/03f8/8b4c/be5df929ebde7688c573f3bf280a1c07?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=Wf-hse2R2vUGBSHfVYpez~5qCQQXuFbc-~Hy6jnrnp-nIMnekv9hO3ZOkIBDLvVUB9P9hCWjksXXntbjMK7DQdKDjsPZiBgCZ4sAS~hBsyDFGLyJA0Kx2SZ4vUyWaRQDwwrWmt8r1C9J1SKYub0ngbb24DR6kFCKi1R~~sjEti9cRABSfmJLOOdaU0bfda6QfE0j8q80H27Py33xwG5CfN2wQmMKZD4x2fuLFpmVDmSeryM9K4bejMCG0mqdWr6qJQLGb8JE6kU7yTu-F0jHJNaUpv2jRjVIw6R-uSF2h08rpFqGzQ4r8r8PijBzyOp5fYr1DRHZyrxkS0z~WEi0yw__" alt="" id="img3">
+    <img src="https://istudio-shop.ru/upload/iblock/5db/t1sczjk16tadlz1rwannnv41kwmh9mlm.webp" alt="" id="img3">
     <h2>Ipad Pro</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
     <button ><a href="shop.html">Shop now</a></button>
 </div>
 <div class="product3">
-    <img src="https://s3-alpha-sig.figma.com/img/42ed/e37f/5b7179151ff1aece13de5d13a9577763?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=uGuhB4iDoFcHu9X4UaatQ9xNvP2o6umav9nWDylyafjJNWtWIZdwC1FeKPIHXKvS2yuccgR5R-32LXZvx2OU0JIM~NE7va5VPUTdq-kvzij3JjizTrxR4hT-RiUrXLhsonl0CI3MKJKjNwjO4ADu09dNQgVJ45WQ-6DsPPWZiW-OwpAqzWepq~L-o5rAzXUwxzYL3hlR-BCsZhXqGYWYddeMhPukwdocUzuccCNbHzK6ygjFZKLQEeC1HNpXe5MZhiHymfeA8crMp8YK7qbS1ZSIT2pktkAgzDZuhOvOg7tm-sbpqjjtaLpXH3nJRaDZNJmTdJt2c11ZRLeVX5itYg__" alt="" id="img4">
+    <img src="https://smarton.az/storage/products/49406/new-project-2022-08-20t140406707-png.webp" alt="" id="img4">
     <h2>Samsa Galaxy</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
     <button ><a href="shop.html">Shop now</a></button>
 </div>
 <div class="product4">
-    <img src="https://s3-alpha-sig.figma.com/img/841a/2189/2886e7ecb5d47ea5c6ae4bebd8ac7b6a?Expires=1745798400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=a46L9XPeqG8gTWW86qCYRpsBGZi63YN1QsF~g7GTmT4lJIpjHuz7HXh2uhH-Qvgl82w6gPWZA2QwyQiA3QrV8z0WxTf6SidSjF0MxiVSkdc7KuFzT07OsIltp1MyrAlWm-046cyawpNabrE14sdcsYlNMzfRWc4OVTQhRVS3THsY2rsMd9lJ06Od6p0X-ZFmnj-WbHOV8Qs-apfBMdw5XZNpgLhq6~12oXbVs6oibwhhkBhqNn7~cKf5gesrzvGx~Zt5SjeKZ4YR8N0buxWj~dC2CQLVg7U~dGXivEieTwuoBMJXpdCwtTot5cyKYRkR~nDaJrhVFluBOOUNGWWEqw__" alt="" id="img5">
+    <img src="https://ibrat.ru/upload/iblock/a92/o8vozz5dbzfb74tovvemab1oltf990mj.jpg" alt="" id="img5">
     <h2>Ermacbook Pro</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
     <div class="but">
