--- a/login.html
+++ b/login.html
@@ -32,7 +32,9 @@
             <p class="password">Password</p>
             <input id="inp22" type="password">
             <h4>Don't have account ? <a href="creataccount.html">sign up</a></h4>
-            <button id="btn2">Log in</button>
+            <div class="button">
+                <a href="index.html">Log in</a>
+            </div>
         </div>
     </div>
 </body>
