--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a href="shop.html"> Shop</a>
     <input type="text" placeholder="What you looking for?">
     <i class="fa-solid fa-magnifying-glass"></i>
-    <p class="un">Username</p>
-    <a href="login.html" class="log">Log in</a>
+    <p class="un" id="username11">Username</p>
+    <a href="login.html" class="log" id="logBtn">Log in</a>
     </div>
     <div class="img">
         <img src="https://th.bing.com/th/id/OIP.nChCJB-fuVcN_a6ufgwNKwHaFR?cb=iwc2&w=800&h=569&rs=1&pid=ImgDetMain" alt="">
@@ -142,5 +142,6 @@
     <h3>Copyright Rimel 2022.All right reserved</h3>
 </div>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
