--- a/login.html
+++ b/login.html
@@ -33,9 +33,10 @@
             <input id="inp22" type="password">
             <h4>Don't have account ? <a href="creataccount.html">sign up</a></h4>
             <div class="button">
-                <a href="index.html">Log in</a>
+                <a href="index.html" id="btn2">Log in</a>
             </div>
         </div>
     </div>
+    <script src="./login.js"></script>
 </body>
 </html>
