--- a/newproduct.html
+++ b/newproduct.html
@@ -22,6 +22,8 @@
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
         <i class="fa-solid fa-magnifying-glass"></i>
+                        <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
+        <a href="creataccount.html"  class="fa-solid fa-user"></a>
         <p>Username</p>
         <a href="login.html" class="log">Log in</a>
         </div>
@@ -39,6 +41,8 @@
                         <th>Цена</th>
                         <th>операции</th>
                     </tr>
+                        <div id="product-list"></div>
+
                 </thead>
                 </table>
     </div>
