--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,8 @@
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
         <a href="" class="fa-solid fa-magnifying-glass"></a>
+                        <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
+        <a href="creataccount.html"  class="fa-solid fa-user"></a>
         <p class="user">Username</p>
         <a href="login.html" class="log">Log in</a>
         </div>
