--- a/creataccount.html
+++ b/creataccount.html
@@ -25,21 +25,21 @@
         <p class="user">Username</p>
         <a href = "login.html" class="log">Log in</a>
         </div>
-        <div class="account2">
+        <form id="registerForm">
             <h1>Create an account</h1>
             <p class="name">Name</p>
-            <input id="inp1" type="text">
+            <input id="inp1" type="text"  required>
             <p class="surname">surname</p>
-            <input id="inp2" type="text">
+            <input id="inp2" type="text"required>
             <p class="mail">Email</p>
-            <input id="inp3" type="email">
+            <input id="inp3" type="email" required>
             <p class="username">Username</p>
-            <input id="inp4" type="text">
+            <input id="inp4" type="text" required>
             <p class="password">Password</p>
-            <input id="inp5" type="password">
+            <input id="inp5" type="password"required>
             <h4>Allready have account ? <a href="login.html">Log in</a></h4>
                 <button class="btn">Creat account</button>
-        </div>
+        </form>
         <div class="contact">
             <div class="exclusive">
                 <h2>Exlusive</h2>
