--- a/creatproduct.html
+++ b/creatproduct.html
@@ -22,8 +22,10 @@
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
         <i class="fa-solid fa-magnifying-glass"></i>
+                        <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
+        <a href="creataccount.html"  class="fa-solid fa-user"></a>
         <p>Username</p>
-        <a href="login.html" class="log">Log in</a>
+  <button type="submit">Log in</button>
         </div>
 <div class="creatproduct">
     <h1>Creat product</h1>
