--- a/login.html
+++ b/login.html
@@ -22,20 +22,20 @@
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
         <i href="" class="fa-solid fa-magnifying-glass"></i>
+        <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
+        <a href="creataccount.html"  class="fa-solid fa-user"></a>
         <p class="user">Username</p>
         <a href = "login.html" >Log in</a>
         </div>
-        <div class="login">
+  <form id="loginForm">
             <h1>Log in</h1>
-            <p class="name">Name</p>
-            <input id="inp12" type="text">
+            <p class="name">username</p>
+            <input id="inp12" type="text" required>
             <p class="password">Password</p>
-            <input id="inp22" type="password">
+            <input id="inp22" type="password" required>
             <h4>Don't have account ? <a href="creataccount.html">sign up</a></h4>
-            <div class="button">
-                <a href="index.html" id="btn2">Log in</a>
-            </div>
-        </div>
+            <button type="submit" >Login</button>
+</form>
     </div>
     <script src="./login.js"></script>
 </body>
