--- a/userdetail.html
+++ b/userdetail.html
@@ -23,6 +23,8 @@
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
         <i class="fa-solid fa-magnifying-glass"></i>
+                        <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
+        <a href="creataccount.html"  class="fa-solid fa-user"></a>
         <p class="un">Username</p>
         <a href="login.html" class="log">Log in</a>
         </div>
