--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <a href="shop.html"> Shop</a>
     <input type="text" placeholder="What you looking for?">
     <i class="fa-solid fa-magnifying-glass"></i>
-    <p class="un" id="username11">Username</p>
+                    <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
+        <a href="creataccount.html"  class="fa-solid fa-user"></a>
+<p class="un" id="username11">Username</p>
+
     <a href="login.html" class="log" id="logBtn">Log in</a>
     </div>
     <div class="img">
@@ -74,7 +77,7 @@
     <img src="https://store.storeimages.cdn-apple.com/1/as-images.apple.com/is/MYPD3ref_VW_34FR+watch-case-49-titanium-black-ultra2_VW_34FR+watch-face-49-ocean-ultra2_VW_34FR?wid=750&hei=712&trim=1%2C0&fmt=p-jpg&qlt=95&.v=VEREVGFsQzRDQXZXemdUckh4dmo3M2pDV2hhem5qNnpDenFtKzI1OXdzWjRaeVR4RW9XWXhWVHRHeXZEa3AwcGZsNDErT2hQbWVmS0VCWlVweVY1UHBiVmVXUVJPYnV1S0FZc3FMLzd3SDd1WDdBMEYxOHdORVUzNUYwZW1oWG1DNE9SNitRbkZucDJpVTQ1OXJpUjBiTEUzUW85Sno0bFVnTlk1MUgrdDg1TDRhMUZFNkNzVXdnTkZUdEl6aVpCOS9hNTBXSXZxREJuYlA3cktjelJXZw" id="img2" alt="">
     <h2>Popular Product</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
-    <button href="shop.html">Shop Now</button>
+    <button ><a href="shop.html">Shop now</a></button>
 </div>
 <div class="product2">
     <img src="https://istudio-shop.ru/upload/iblock/5db/t1sczjk16tadlz1rwannnv41kwmh9mlm.webp" alt="" id="img3">
@@ -93,7 +96,7 @@
     <h2>Ermacbook Pro</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, animi?</p>
     <div class="but">
-        <button href="shop.html">Shop Now</button>
+    <button ><a href="shop.html">Shop now</a></button>
     </div>
 </div>
 </div>
