--- a/creatproduct.html
+++ b/creatproduct.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="creatproduct.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="creatproduct.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+  <title>Create Product</title>
 </head>
 <body>
-    <div class="parent">
-        <div class="sale">
-            <p>Summer Sale For All Swim And Free Express Delivery - OFF 50%</p>
-            <a href="shop.html">Shop now</a>
-        </div>
-        <div class="menu">
-            <h2>E-commerce</h2>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="creataccount.html">Sign Up</a>
-            <a href="shop.html"> Shop</a>
-        <input type="text" placeholder="What you looking for?">
-        <i class="fa-solid fa-magnifying-glass"></i>
-                        <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
-        <a href="creataccount.html"  class="fa-solid fa-user"></a>
-        <p>Username</p>
-  <button type="submit">Log in</button>
-        </div>
-<div class="creatproduct">
-    <h1>Creat product</h1>
-    <p>Brand</p>
-    <input type="text" id="brand">
-    <p>Model</p>
-    <input type="text" id="model">
-    <p>categories</p>
-    <input type="text" id="categories">
-    <p>Description</p>
-    <input type="text" id="Description">
-    <p>price</p>
-    <input type="number" id="price">
-    <p>Image URL</p>
-    <div class="img">
-        <img src="" alt="" id="img1">
+  <div class="parent">
+    <div class="sale">
+      <p>Summer Sale For All Swim And Free Express Delivery - OFF 50%</p>
+      <a href="shop.html">Shop now</a>
     </div>
-    <input type="url" id="Img">
-    <button onclick="func1()">Save</button>
-</div>
+    <div class="menu">
+      <h2>E-commerce</h2>
+      <a href="index.html">Home</a>
+      <a href="contact.html">Contact</a>
+      <a href="about.html">About</a>
+      <a href="creataccount.html">Sign Up</a>
+      <a href="shop.html">Shop</a>
+      <input type="text" placeholder="What you looking for?" />
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <a href="cart.html" class="fa-solid fa-basket-shopping"></a>
+      <a href="creataccount.html" class="fa-solid fa-user"></a>
+      <p>Username</p>
+      <button type="submit">Log in</button>
     </div>
-    <script src="creatproduct.js"></script>
+
+    <div class="creatproduct">
+      <h1>Create Product</h1>
+      <p>Brand</p>
+      <input type="text" id="brand" />
+      <p>Model</p>
+      <input type="text" id="model" />
+      <p>Category</p>
+      <input type="text" id="categories" />
+      <p>Description</p>
+      <input type="text" id="Description" />
+      <p>Price</p>
+      <input type="number" id="price" />
+      <p>Image URL</p>
+      <div class="img">
+        <img src="" alt="" id="img1" width="150" />
+      </div>
+      <input type="url" id="Img" />
+      <button onclick="func1()">Save</button>
+    </div>
+  </div>
+  <script src="creatproduct.js"></script>
 </body>
 </html>
